--- a/style.css
+++ b/style.css
@@ -217,9 +217,9 @@ img {
   }
 
 
-.projects-desc{
+/* .projects-desc{
     margin-bottom: 48px;
-  }
+  } */
 
   .projects-sub-title {
     font-family: 'Roboto', sans-serif;
@@ -330,6 +330,10 @@ textarea[type=text] {
 	background-color: #000000;
 	padding: 48px 0;
 }
+
+.footer-iconic-col-inner .site-link {
+    text-align: center;
+  }
 
 .footer-site-logo {
     border: 1px solid #ffffff;
